fixed banner padding responsiveness and aligned all text left

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3152,6 +3152,8 @@ input, select, textarea {
 		}
 
 			.post > .content header .category {
+				font-family: proxima-nova;
+				font-variant: small-caps;
 				font-weight: 600;
 				display: block;
 				margin: 0 0 0.35rem 0;
@@ -3348,8 +3350,8 @@ input, select, textarea {
 
 		#wrapper > .main > header {
 			width: 100%;
-			max-width: 35.6rem;
-			text-align: center;
+			max-width: 35rem;
+			text-align: left;
 			margin: 0 auto 3rem auto;
 		}
 
@@ -4299,10 +4301,9 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 			-ms-transition: -ms-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 			transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-			/* padding: 4.75rem; */
-			padding: 4.75rem 10rem 4.75rem 10rem;
+			padding: 4.75rem 15rem 4.75rem 15rem;
 			width: 100%;
-			text-align: center;
+			text-align: left;
 			position: relative;
 			z-index: 1;
 			margin-top: 2rem;
@@ -4454,7 +4455,7 @@ input, select, textarea {
 			}
 
 				#banner > .content h1 {
-					font-size: 1.4rem;
+					font-size: 1.75rem;
 				}
 
 				#banner > .content p {
